[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/MavenProRegular_54.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/MavenProBlack_92.tres" type="DynamicFont" id=2]
[ext_resource path="res://jenga_prototype/screens/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://resources/themes/theme_button_pure_text.tres" type="Theme" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PauseMenu" type="Popup"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.27451, 0.215686, 0.352941, 0.588235 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 269.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Pause"

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_top = 113.0
margin_right = 269.0
margin_bottom = 178.0
theme = ExtResource( 4 )
text = "Resume"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 269.0
margin_bottom = 247.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.439216 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0.929412, 1, 1 )
custom_colors/font_color_pressed = Color( 0.152941, 0.329412, 0.458824, 1 )
text = "Quit"
[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
